--- a/index.html
+++ b/index.html
@@ -33,11 +33,39 @@
     .x.axis path {
       display: none;
     }
+
+    .toolTip {
+      pointer-events: none;
+      position: absolute;
+      display: none;
+      min-width: 50px;
+      height: auto;
+      background: none repeat scroll 0 0 #ffffff;
+      padding: 9px 14px 6px 14px;
+      border-radius: 4px;
+      text-align: left;
+      line-height: 1.3;
+      color: #5B6770;
+      box-shadow: 0px 3px 9px rgba(0, 0, 0, .15);
+    }
+
+    .toolTip:after {
+      content: "";
+      width: 0;
+      height: 0;
+      border-left: 12px solid transparent;
+      border-right: 12px solid transparent;
+      border-top: 12px solid white;
+      position: absolute;
+      bottom: 0px;
+      left: 50%;
+      margin-left: -12px;
+    }
   </style>
 </head>
 
 <body>
-  <h1>US GDP</h1>
+  <h1>US GDP (Billions)</h1>
   <div id="chart"></div>
   <script>
     var data;
@@ -177,8 +205,35 @@
         })
         .attr("height", function (d) {
           return height - y(d[1]);
-        });
+        })
+        .on("mousemove", function (d) {
+          d3.select(this).attr("fill", "#588C73");
+          tooltip
+            .style("left", d3.event.pageX - 50 + "px")
+            .style("top", d3.event.pageY - 70 + "px")
+            .style("display", "inline-block")
+            .html("<p>date: " + d[0] + "</p><p>GPD: " + d[1] + "</p>");
 
+        })
+        .on("mouseout", function (d, i) {
+          tooltip.style("display", "none");
+          d3.select(this).attr("fill", function (d) {
+            if (d.IRCAPromedio <= 5) {
+              return "#ffffb2"
+            } else if (d.IRCAPromedio <= 14) {
+              return "#fecc5c"
+            } else if (d.IRCAPromedio <= 35) {
+              return "#fd8d3c"
+            } else if (d.IRCAPromedio <= 70) {
+              return "#f03b20"
+            } else {
+              return "#bd0026"
+            }
+          });
+        })
+
+      //Defino los tooltips
+      var tooltip = d3.select("body").append("div").attr("class", "toolTip");
 
     }
   </script>
